// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createSearchComponent — rendering > renders across multiple files with same query 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Search (2/2)[0m               [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m lib/utils.ts[0m                                    [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m lib/utils.ts:1[22m[39m             [49m[38;2;250;208;0m│[39m[0m  [38;2;250;208;0mexport function [38;2;250;208;0m[1mfoo[22m[39m(): void {}[39m[0m                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m src/main.ts:2[0m              [38;2;250;208;0m│[39m[0m  export const BAR = 42;[0m                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [0m                                               [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  pgup scroll  ctrl+e edit  ctrl+i insert[0m                               [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`createSearchComponent — rendering > renders correctly at narrow width 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m───────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Search (1/1)[0m [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m src/app.ts[0m            [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m───────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m src/app.ts:1[22m[39m [49m[38;2;250;208;0m│[39m[0m  [38;2;250;208;0mconst x = [38;2;250;208;0m[1m42[22m[39m;[39m[0m        [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m  [0m                     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m  // This is a comment[0m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m  function hello() {[0m   [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m    return x;[0m          [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m  }[0m                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m  [0m                     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m                       [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m                       [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m                       [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m                       [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m                       [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m                       [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m                       [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m                       [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m                       [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m                       [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m                       [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m                       [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m                       [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m                       [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m                       [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m                       [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m                       [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m                       [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m───────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  pgup scroll  ctrl+e edit  ctrl[39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`createSearchComponent — rendering > renders correctly at wide width 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Search (1/1)[0m                             [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m src/app.ts[0m                                                                [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m src/app.ts:1[22m[39m                             [49m[38;2;250;208;0m│[39m[0m  [38;2;250;208;0mconst x = [38;2;250;208;0m[1m42[22m[39m;[39m[0m                                                            [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [0m                                                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  // This is a comment[0m                                                     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  function hello() {[0m                                                       [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m    return x;[0m                                                              [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  }[0m                                                                        [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m  [0m                                                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  pgup scroll  ctrl+e edit  ctrl+i insert[0m                                                                       [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`createSearchComponent — rendering > renders empty state with no results 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Search (0/0)[0m               [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m Source Preview[0m                                  [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[38;2;76;62;118m No items found[0m             [39m[38;2;250;208;0m│[39m[0m[38;2;76;62;118m  No preview available[39m[0m                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  pgup scroll[0m                                                           [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`createSearchComponent — rendering > renders multiple results 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Search (3/3)[0m               [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m src/a.ts[0m                                        [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m src/a.ts:1[22m[39m                 [49m[38;2;250;208;0m│[39m[0m  [38;2;250;208;0m[38;2;250;208;0m[1mfoo[22m[39m bar[39m[0m                                        [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m src/b.ts:2[0m                 [38;2;250;208;0m│[39m[0m  baz qux[0m                                        [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m src/c.ts:3[0m                 [38;2;250;208;0m│[39m[0m  [0m                                               [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  pgup scroll  ctrl+e edit  ctrl+i insert[0m                               [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`createSearchComponent — rendering > renders search with highlighted match text 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Search (1/1)[0m               [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m src/app.ts[0m                                      [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m src/app.ts:1[22m[39m               [49m[38;2;250;208;0m│[39m[0m  [38;2;250;208;0mconst [38;2;250;208;0m[1mhello[22m[39m2;[39m[0m                                  [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [0m                                               [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  // This is a comment[0m                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  function hello() {[0m                             [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m    return x;[0m                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  }[0m                                              [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [0m                                               [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  pgup scroll  ctrl+e edit  ctrl+i insert[0m                               [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`createSearchComponent — rendering > renders search with query in title 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Search: const (1/1)[0m        [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m src/app.ts[0m                                      [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m src/app.ts:1[22m[39m               [49m[38;2;250;208;0m│[39m[0m  [38;2;250;208;0mconst x = [38;2;250;208;0m[1m42[22m[39m;[39m[0m                                  [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [0m                                               [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  // This is a comment[0m                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  function hello() {[0m                             [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m    return x;[0m                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  }[0m                                              [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [0m                                               [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  pgup scroll  ctrl+e edit  ctrl+i insert[0m                               [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`createSearchComponent — rendering > renders single result with preview 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Search (1/1)[0m               [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m src/app.ts[0m                                      [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m src/app.ts:1[22m[39m               [49m[38;2;250;208;0m│[39m[0m  [38;2;250;208;0mconst x = [38;2;250;208;0m[1m42[22m[39m;[39m[0m                                  [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [0m                                               [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  // This is a comment[0m                           [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  function hello() {[0m                             [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m    return x;[0m                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  }[0m                                              [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  [0m                                               [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  pgup scroll  ctrl+e edit  ctrl+i insert[0m                               [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;
